add some backend unit tests